<resources>
    <string name="app_name">Journey</string>
    <!--Login Page -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="usernameEdit">Username</string>
    <string name="password">Password</string>
    <string name="passwordEdit">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="loginButton">Login</string>
    <string name="newUser">New User ?</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="invalidLogin">Invalid username or password</string>
    <!--SignUp Page -->
    <string name="signUpButton">Sign Up</string>
    <string name="signUp">Sign Up</string>
    <string name="fullName">Full name</string>
    <string name="fullNameEdit">Full name</string>
    <string name="emailID">Email-ID</string>
    <string name="emailIDEdit">Email ID</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="confirmPasswordEdit">Confirm Password</string>
    <string name="alreadyUser">Already an User ?</string>
    <string name="signUpSucess">Sign up Successful</string>
    <string name="signUpFail">Sign up Failed</string>
    <string name="pleaseCheck">Please check your inputs</string>
    <!--Home Page -->
    <string name="getStarted">Get Started</string>
    <string name="helloText">Hi! </string>
    <string name="where_to_go">Where are you going?</string>
...
